--- a/spark-extension/pom.xml
+++ b/spark-extension/pom.xml
@@ -29,6 +29,7 @@
   <packaging>jar</packaging>
 
   <dependencies>
+
     <dependency>
       <groupId>org.apache.auron</groupId>
       <artifactId>hadoop-shim_${scalaVersion}</artifactId>
@@ -75,6 +76,24 @@
     <dependency>
       <groupId>org.apache.arrow</groupId>
       <artifactId>arrow-vector</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${scalaVersion}</artifactId>
+      <version>${sparkVersion}</version>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_${scalaVersion}</artifactId>
+      <version>${sparkVersion}</version>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-catalyst_${scalaVersion}</artifactId>
+      <version>${sparkVersion}</version>
+      <type>test-jar</type>
     </dependency>
   </dependencies>
 
