--- a/spark-extension/pom.xml
+++ b/spark-extension/pom.xml
@@ -36,6 +36,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.auron</groupId>
+      <artifactId>auron-core_${scalaVersion}</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.auron</groupId>
       <artifactId>spark-version-annotation-macros_${scalaVersion}</artifactId>
       <version>${project.version}</version>
       <scope>compile</scope>
