--- a/auron-core/pom.xml
+++ b/auron-core/pom.xml
@@ -25,7 +25,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>auron-core</artifactId>
+  <artifactId>auron-core_${scalaVersion}</artifactId>
   <packaging>jar</packaging>
 
   <dependencies>
