[AURON #1370]Add an SparkAuronConfiguration class to accumulate description information for each property.

--- a/spark-extension/pom.xml
+++ b/spark-extension/pom.xml
@@ -31,6 +31,11 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.auron</groupId>
+      <artifactId>auron-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.auron</groupId>
       <artifactId>hadoop-shim_${scalaVersion}</artifactId>
       <version>${project.version}</version>
     </dependency>
