--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <module>hadoop-shim</module>
     <module>dev/mvn-build-helper/assembly</module>
     <module>dev/mvn-build-helper/proto</module>
+    <module>auron-spark-ui</module>
   </modules>
 
   <properties>
@@ -56,7 +57,7 @@
     <scalaVersion>2.12</scalaVersion>
     <scalaLongVersion>2.12.17</scalaLongVersion>
     <scalaJava8CompatVersion>1.0.2</scalaJava8CompatVersion>
-    <maven.version>3.9.11</maven.version>
+    <maven.version>3.8.1</maven.version>
     <maven.plugin.scala.version>4.9.2</maven.plugin.scala.version>
     <maven.plugin.scalatest.version>2.2.0</maven.plugin.scalatest.version>
     <maven.plugin.scalatest.exclude.tags />
@@ -124,6 +125,11 @@
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-core_${scalaVersion}</artifactId>
+        <version>${sparkVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-catalyst_${scalaVersion}</artifactId>
         <version>${sparkVersion}</version>
       </dependency>
       <dependency>
