[AURON #1428]Follow #1413 in auron-flink-extension

--- a/auron-flink-extension/pom.xml
+++ b/auron-flink-extension/pom.xml
@@ -27,6 +27,8 @@
 
   <artifactId>auron-flink-extension</artifactId>
   <packaging>jar</packaging>
+  <name>Apache Auron Flink ${flink.version}</name>
+  <description>Apache Auron Flink Project</description>
 
   <properties>
     <flink.markBundledAsOptional>false</flink.markBundledAsOptional>
