--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -77,3 +77,12 @@ jobs:
       javaver: '17'
       scalaver: '2.13'
       hadoop-profile: 'hadoop3'
+
+  test-spark-35-jdk21-scala-2-13:
+    name: Test spark-3.5 JDK21 Scala-2.13
+    uses: ./.github/workflows/tpcds-reusable.yml
+    with:
+      sparkver: spark-3.5
+      javaver: '21'
+      scalaver: '2.13'
+      hadoop-profile: 'hadoop3'
