--- a/.github/workflows/iceberg.yml
+++ b/.github/workflows/iceberg.yml
@@ -40,7 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         iceberg: [ "1.9" ]
-        javaver: [ "11"]
+        javaver: [ "11", "17"]
         scalaver: [ "2.12" ]
         module: [ "thirdparty/auron-iceberg" ]
         sparkver: [ "spark-3.4", "spark-3.5" ]
